--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -22,59 +22,17 @@ Add findings within the {{< var validmind.platform >}} at the model or documenta
 
 {{< include _add-model-findings.qmd >}}
 
-#### Add finding via overview
+{{< include _add-finding-via-overview.qmd >}}
 
-To log a finding from the documentation overview: 
-
-1. On your model's **{{< fa book-open >}} Documentation** page, click **{{< fa plus >}} Add Finding**.
-
-2. On the **Add Model Finding** modal that opens, provide information for: 
-
-   - Title
-   - Risk area
-   - Owner
-   - Severity
-   - Due date
-   - Documentation section
-   - Description
-
-3. When you are done, click **Save** to submit the finding. 
-
-   Once created, you can then add supporting documentation to your finding.[^4]
-
-#### Add finding via section
-
-While working within a section of your documentation, you can easily log a finding associated with that section without leaving the page:
-
-1. Click on **{{< var vm.product >}} Insights™** to expand the insight panel.
-
-2. For the section you want to add a Finding for, click **{{< fa triangle-exclamation >}}  Add Finding** beneath the Documentation Guidelines.
-
-3. On the **Add Model Finding** modal that opens, provide information for: 
-
-   - Title
-   - Risk area
-   - Owner
-   - Severity
-   - Due date
-   - Documentation section
-   - Description
-   
-   The documentation section will be auto-populated with the section you are working from — you are able to select another section if desired.
-
-   ![Adding a finding with the {{< var vm.product >}} Insights™ panel](add-section-finding.gif){fig-alt="An animated gif demonstrating how to add a finding with the ValidMind Insights™ panel" .screenshot}
-
-4. When you are done, click **Save** to submit the finding. 
-
-   Once created, you can then add supporting documentation to your finding.[^5]
+{{< include _add-finding-via-section.qmd >}}
 
 ## Add findings on validation reports
 
-When linking findings to validation reports,[^6] you can add findings as you assess a model's compliance:
+When linking findings to validation reports,[^4] you can add findings as you assess a model's compliance:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^7]
+2. Select a model or find your model by applying a filter or searching for it.[^5]
 
 3. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 
@@ -98,14 +56,14 @@ When linking findings to validation reports,[^6] you can add findings as you ass
 
 As findings get resolved or require other changes during the model validation process, you can update them:
 
-1. Locate the finding you want to update.[^8]
+1. Locate the finding you want to update.[^6]
 
 2. Click on a field to make changes. You can make updates to:
 
    - Title
    - Description
    - Proposed remediation plan
-   - Supporting documentation[^9]
+   - Supporting documentation[^7]
    - Status
    - Severity
    - Risk area
@@ -144,14 +102,14 @@ Uploaded files must be less than 50 MB each in size.
 ## Delete model findings
 
 ::: {.callout-important title="Finding deletion is permanent."}
-- While finding deletion will be logged under your {{< fa wifi >}} Model Activity,[^10] deleted findings cannot be retrieved.
-- Deleting a finding will also remove it from any validation reports[^11] it was previously attached to.
+- While finding deletion will be logged under your {{< fa wifi >}} Model Activity,[^8] deleted findings cannot be retrieved.
+- Deleting a finding will also remove it from any validation reports[^9] it was previously attached to.
 
 :::
 
-If you logged a finding in error or otherwise no longer need to track that finding, you can delete it: 
+If you logged a finding in error or otherwise no longer need to track that finding, you can delete it:
 
-1. Locate the finding you want to delete.[^12]
+1. Locate the finding you want to delete.[^10]
 
 2. On the finding's detail page, click **{{< fa trash-can>}} Delete Finding** in the right sidebar.
 
@@ -168,20 +126,16 @@ If you logged a finding in error or otherwise no longer need to track that findi
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Manage supporting documentation](#manage-supporting-documentation)
+[^4]: [Assess compliance](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
 
-[^5]: [Manage supporting documentation](#manage-supporting-documentation)
+[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^6]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
+[^6]: [View and filter model findings](view-filter-model-findings.qmd)
 
-[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^7]: [Manage supporting documentation](#manage-supporting-documentation)
 
-[^8]: [View and filter model findings](view-filter-model-findings.qmd)
+[^8]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
-[^9]: [Manage supporting documentation](#manage-supporting-documentation)
+[^9]: [Assess compliance](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
 
-[^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
-
-[^11]: [Assess compliance](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
-
-[^12]: [View and filter model findings](view-filter-model-findings.qmd)
+[^10]: [View and filter model findings](view-filter-model-findings.qmd)
