--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -227,7 +227,7 @@ For example:
 ::: {.f5}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
-3. Click into any section of the documentation to add or edit a content block.
+3. Click into any section of the documentation to add and edit a content block.
 
 :::
 
