--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -47,7 +47,7 @@ This final module is part of a four-part series:
 ### Section 1
 
 - [Refine validation report](#refine-validation-report)
-- [Review model findings](#review-model-findings)
+- [Manage model findings](#manage-model-findings)
 - [Submit validation report for approval](#submit-report-for-approval)
 
 :::
@@ -58,6 +58,7 @@ This final module is part of a four-part series:
 - [Collaborate with others](#collaborate-with-others)
 - [Track model activity](#track-model-activity)
 - [View analytics](#view-analytics)
+
 :::
 
 ::::
@@ -189,14 +190,14 @@ For example:
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Add & edit content blocks**
 
-::: {.f5}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
-3. Click on **1. Executive Summary** to add and edit a content block.
-4. Click on **2.2.1. Data Quality** to edit the description for the linked Class Imbalance Assessment test results.
+::: {.f6}
+Within your **{{< fa shield >}} Validation Report**:
+
+1. Click on **1. Executive Summary** to add and edit a content block.
+2. Click on **2.2.1. Data Quality** to edit the description for the linked Class Imbalance Assessment test results.
 
 :::
 
@@ -253,53 +254,56 @@ In the same Class Imbalance Assessment sub-section, above the Risk Assessment No
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Add your compliance assessments**
 
-::: {.f5}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
-3. Click on **2.2.1. Data Quality** to assess compliance for the Class Imbalance Assessment sub-section.
+::: {.f6}
+Within your **{{< fa shield >}} Validation Report**, click on **2.2.1. Data Quality** to assess compliance for the Class Imbalance Assessment sub-section.
 
 :::
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
-::::
+:::
 
-# Review model findings {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Manage model findings {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-More on model findings
+Add more findings
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
 :::
 
 ::: {.tc}
-[Learn more ...](/guide/model-validation/working-with-model-findings.qmd){.button target="_blank"}
+[Learn more ...](/guide/model-validation/add-manage-model-findings.qmd){.button target="_blank"}
 
 :::
 
-<br>Try it **live** on the next pages. {{< fa hand-point-right >}}
+<br>
+
+Try it **live** on the next pages. {{< fa hand-point-right >}}
+
 :::
 
 ::: {.column width="70%" .bl .pl4 .f4}
 
 Along with adding findings directly via validation reports, you can also add findings during your review of documentation:
 
+{{< include /guide/model-validation/_add-model-findings.qmd >}}
+
 ::: {.panel-tabset}
 
 ### Add finding via overview
 
-wip - single-source
+{{< include /guide/model-validation/_add-finding-via-overview.qmd >}}
 
 ### Add finding via section
 
-wip - single-source
+{{< include /guide/model-validation/_add-finding-via-section.qmd >}}
 
 :::
 
@@ -308,17 +312,29 @@ wip - single-source
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-::: {.fr .f5 .nr5 .pa5 .overlay}
-**Add a finding via documentation**
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+**Add a finding via overview**
 
-WIP
+::: {.f6}
+Within the model's **{{< fa book-open >}} Documentation**, click **{{< fa plus >}} Add Finding** to add a finding from the overview.
 
-::: {.f5 .pl3 .pr3 .embed}
-WIP
 :::
 
-When you're done adding your findings,
-<br>click [{{< fa chevron-right >}}]() to continue.
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+:::
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+**Add a finding via section**
+
+::: {.f6}
+Within the model's **{{< fa book-open >}} Documentation**, click on any section heading to expand and add a finding to that section via the **{{< var vm.product >}} Insights™** panel.
+
+:::
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::
 
