--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -156,10 +156,10 @@ From the {{< var validmind.platform >}}:
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Review model documentation**
 
-::: {.f5}
+::: {.f6}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
 2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
 3. Click into any section of the documentation to review the test results logged via the {{< var validmind.developer >}}. <br>
@@ -221,13 +221,11 @@ For example:
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Add & edit content blocks**
 
-::: {.f5}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
-3. Click into any section of the documentation to add and edit a content block.
+::: {.f6}
+From your model's **{{< fa book-open >}} Documentation**, click into any section of the documentation to add and edit a content block.
 
 :::
 
@@ -279,10 +277,10 @@ To transition through the approval workflow, all required workflow steps must be
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Submit for approval**
 
-::: {.f5}
+::: {.f6}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
 2. Locate the **[model status]{.smallcaps}** section.
 3. Open up the status transition panel, enter your **[notes]{.smallcaps}** and any other additional inventory fields, then click **Submit**.
@@ -326,13 +324,11 @@ Comment threads
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Comment on model documentation**
 
-::: {.f5}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
-3. **In the content block you added earlier:** Post a comment, reply to it, and then resolve the thread.
+::: {.f6}
+**In the content block you added earlier** within your model's **{{< fa book-open >}} Documentation**: Post a comment, reply to it, and then resolve the thread.
 
 :::
 
@@ -369,10 +365,10 @@ Track changes & updates
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Review model activity**
 
-::: {.f5}
+::: {.f6}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
 2. In the left sidebar that appears for your model, click **{{< fa wifi >}} Model Activity**.
 3. Filter the following activity: **Comments** | **Status Updates** | **Model Updates** | **Test Results**
