--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -142,10 +142,10 @@ Let's start our journey with **1 — Set up the {{< var validmind.developer >}}*
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html" background-interactive="yes" data-preload="yes"} 
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
+:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
 **1 — Set up the {{< var validmind.developer >}}**
 
-::: {.f5}
+::: {.f6}
 During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully documented sample model ready for review.
 :::
 
@@ -159,7 +159,7 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 ## {background-iframe="https://app.prod.validmind.ai" background-interactive="true" data-preload="yes"}
 
-::: {.fr .f4 .nr5 .pa5 .overlay}
+::: {.fr .f5 .mv4 .nr5 .pa5 .overlay}
 **Welcome to the {{< var validmind.platform >}}**
 
 From here, you can:
@@ -169,7 +169,7 @@ From here, you can:
 - Collaborate with model validators <br>to get your model approved ...
 - ... and much more!
 
-::: {.f5 .pl3 .pr3 .embed}
+::: {.f6 .pl3 .pr3 .embed}
 **Can't load the {{< var validmind.platform >}}?**
 
 Make sure you're logged in and have <br>refreshed the page in a Chromium-based <br>web browser.
@@ -183,18 +183,18 @@ When you're done navigating around,
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f4 .mv5 .nr5 .pa4 .overlay}
+:::: {.fr .f5 .mv6 .nr5 .pa4 .overlay}
 **Welcome to the model inventory**
 
 Use the model inventory to track <br>
 comprehensive details for all your <br>
-models throughout the model lifecycle. 
+models throughout the model lifecycle.
 
 The model inventory is customizable <br>
 and extensible, with a layout that <br>
 can be configured to suit your needs.
 
-::: {.f5 .pl3 .pr3 .embed}
+::: {.f6 .pl3 .pr3 .embed}
 To start the documentation process, <br>
 a model must already be registered <br>
 in the model inventory via the <br>
@@ -208,13 +208,13 @@ the next page. {{< fa hand-point-right >}}
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/?register=open" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f4 .mv5 .nr5 .pa4 .overlay}
+:::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
 **Register a binary <br>classification model**
 
 1. Select the option <br>
 for a new model:
 
-::: {.f5 .nt2 .pl2}
+::: {.f6 .nt2 .pl2}
 - **Documentation template** — <br>`Binary classification`
 - **Use case** — <br>`Attrition/Churn Management`
 
@@ -228,7 +228,6 @@ inventory.
 When you're done, <br>click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
@@ -282,10 +281,10 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html#install-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Install & initialize the {{< var validmind.developer >}}**
 
-::: {.f5}
+::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
@@ -297,17 +296,16 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
 # Preview model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/1-set_up_validmind.html#preview-the-documentation-template" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Preview the documentation template**
 
-::: {.f5}
+::: {.f6}
 You can preview your model's documentation template right from the {{< var validmind.developer >}}:
 
 1. Continue with **1 — Set up the {{< var validmind.developer >}}**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/1-set_up_validmind.ipynb){target="_blank"}
@@ -321,10 +319,10 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Verify the documentation template**
 
-::: {.f5}
+::: {.f6}
 Once you've called `preview_template()`:
 
 1. From the model inventory, select the name of your model to open up the model details page.
