Adjusting fonts for validator  training

--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -423,7 +423,7 @@ With the test results logged, let's head to the model we connected to at the beg
 **Insert a test-driven block**
 
 ::: {.f6}
-2.3 Correlations and Interactions — `HighPearsonCorrelation:balanced_raw_dataset`
+Within your model's **{{< fa book-open >}} Documentation**: 2.3 Correlations and Interactions — `HighPearsonCorrelation:balanced_raw_dataset`
 
 :::
 
