--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -185,10 +185,10 @@ Let's continue our journey with **Section 1** on the next page. {{< fa hand-poin
 
 ## {background-iframe="/notebooks/tutorials/model_validation/3-developing_challenger_model.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
+:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
 **3 — Developing a potential challenger model**
 
-::: {.f5}
+::: {.f6}
 This is the third notebook in our introductory series, which will walk you through how to evaluate your champion model against a potential challenger with {{< var vm.product >}}.
 
 :::
@@ -247,10 +247,10 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/tutorials/model_validation/3-developing_challenger_model.html#initialize-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Connect to your model**
 
-::: {.f5}
+::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
@@ -266,10 +266,10 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/tutorials/model_validation/3-developing_challenger_model.html#import-the-champion-model" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Import the champion model**
 
-::: {.f5}
+::: {.f6}
 Next, let's import the champion model submitted by the model development team in the format of a `.pkl` file for evaluation:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
@@ -323,12 +323,12 @@ We're curious how an alternate model compares to our champion model, so let's tr
 
 ## {background-iframe="/notebooks/tutorials/model_validation/3-developing_challenger_model.html#training-a-potential-challenger-model" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Random forest classification model**
 
+::: {.f6}
 Let's train our potential challenger model:
 
-::: {.f5}
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run the cell under the following Training a potential challenger model section: **Random forest classification model**
 
@@ -342,10 +342,10 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/tutorials/model_validation/3-developing_challenger_model.html#initializing-the-model-objects" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Initialize the model objects**
 
-::: {.f5}
+::: {.f6}
 In addition to the initialized datasets, you'll also need to initialize a ValidMind model object (`vm_model`) that can be passed to other functions for analysis and tests on the data for each of our two models using [the `vm.init_model()` method](/validmind/validmind.qmd#init_model):
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
@@ -401,10 +401,10 @@ Finally, we want to verify the relative influence of different input features on
 
 ## {background-iframe="/notebooks/tutorials/model_validation/3-developing_challenger_model.html#run-model-performance-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Run model performance tests**
 
-::: {.f5}
+::: {.f6}
 Use [`vm.tests.list_tests()`](/validmind/validmind/tests.qmd#list_tests) to identify all the model performance tests for classification:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
@@ -494,10 +494,10 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="/notebooks/tutorials/model_validation/3-developing_challenger_model.html#run-diagnostic-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Run diagnostic tests**
 
-::: {.f5}
+::: {.f6}
 This time, `use list_tests()` to identify all the model diagnosis tests for classification:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
@@ -513,10 +513,10 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/tutorials/model_validation/3-developing_challenger_model.html#run-feature-importance-tests" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Run feature importance tests**
 
-::: {.f5}
+::: {.f6}
 Use `list_tests()` again to identify all the feature importance tests for classification:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
@@ -534,10 +534,10 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/tutorials/model_validation/4-finalize_validation_reporting.html" background-interactive="yes" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
+:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
 **4 — Finalize testing and reporting**
 
-::: {.f5}
+::: {.f6}
 This is the final notebook in our introductory series, which will walk you through how to supplement ValidMind tests with your own custom tests and include them as additional evidence in your validation report, and wrap up your validation testing.
 :::
 
@@ -588,10 +588,10 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="/notebooks/tutorials/model_validation/4-finalize_validation_reporting.html#initialize-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Connect to your model**
 
-::: {.f5}
+::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
@@ -628,11 +628,11 @@ Let's implement a *custom test* that calculates the confusion matrix:
 
 ## {background-iframe="/notebooks/tutorials/model_validation/4-finalize_validation_reporting.html#implement-a-custom-inline-test" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Implement a custom inline test**
 
-::: {.f5}
-An *inline test* refers to a test written and executed within the same environment as the code being tested — in the following example, right in our Jupyter Notebook —  without requiring a separate test file or framework:
+::: {.f6}
+An *inline test* refers to a test written and executed within the same environment as the code being tested — <br>in the following example, right in our Jupyter Notebook —  without requiring a separate test file or framework:
 
 1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells in the sections under Implementing a custom tests: **Implement a custom inline test**
@@ -651,7 +651,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 **Use external test providers**
 
 ::: {.f5}
-Sometimes you may want to reuse the same set of custom tests across multiple models and share them with others in your organization, like the model development team would have done with you in this example workflow featured in this series of notebooks. In this case, you can create an external custom test provider that will allow you to load custom tests from a local folder or a Git repository:
+Sometimes you may want to reuse the same set of custom tests across multiple models and share them with others in your organization, <br>like the model development team would have done with you in this example workflow featured in this series of notebooks:
 
 1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells in the sections under Implementing a custom tests: **Use external test providers**
@@ -668,10 +668,10 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/tutorials/model_validation/4-finalize_validation_reporting.html#verify-test-runs" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Verify model development testing**
 
-::: {.f5}
+::: {.f6}
 Our final task is to verify that all the tests provided by the model development team were run and reported accurately:
 
 1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
