--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -146,10 +146,10 @@ Let's start our journey with **1 — Set up the {{< var validmind.developer >}} 
 
 ## {background-iframe="/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.html" background-interactive="yes" data-preload="yes"} 
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
+:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
 **1 — Set up the {{< var validmind.developer >}} for validation**
 
-::: {.f5}
+::: {.f6}
 During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully supported sample validation report ready for review.
 :::
 
@@ -174,7 +174,7 @@ From here, you can:
 - View analytics on your models and findings, <br>and create custom reports ...
 - ... and much more!
 
-::: {.f5 .pl3 .pr3 .embed}
+::: {.f6 .pl3 .pr3 .embed}
 **Can't load the {{< var validmind.platform >}}?**
 
 Make sure you're logged in and have refreshed<br> the page in a Chromium-based browser.
@@ -187,18 +187,18 @@ When you're done navigating around,
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f4 .nr5 .pa4 .overlay}
+:::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
 **Welcome to the model inventory**
 
 Use the model inventory to track <br>
 comprehensive details for all your <br>
-models throughout the model lifecycle. 
+models throughout the model lifecycle.
 
 The model inventory is customizable <br>
 and extensible, with a layout that <br>
 can be configured to suit your needs.
 
-::: {.f5 .pl3 .pr3 .embed}
+::: {.f6 .pl3 .pr3 .embed}
 In a usual model lifecycle, <br>
 a champion model will have been <br>
 independently registered in your <br>
@@ -220,13 +220,13 @@ with validation on the next page. {{< fa hand-point-right >}}
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/?register=open" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f4 .mv5 .nr5 .pa4 .overlay}
+:::: {.fr .f5 .mv5 .nr5 .pa4 .overlay}
 **Register a binary <br>classification model**
 
 1. Select the option <br>
 for a new model:
 
-::: {.f5 .nt2 .pl2}
+::: {.f6 .nt2 .pl2}
 - **Documentation template** — <br>`Binary classification`
 - **Use case** — <br>`Attrition/Churn Management`
 
@@ -243,25 +243,21 @@ When you're done, <br>click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
+:::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
 **Assign validator credentials**
 
-::: {.tl}
 In order to log tests as a validator instead of as a developer, we'll need to adjust your **model stakeholder** permissions:
-:::
 
-::: {.f5 .tl}
+::: {.f6 .tl}
 1. From the **{{< fa cubes >}} Inventory**, select the name the model you registered to open up the model details page.
-2. Remove yourself as a developer by clicking on the **[developers]{.smallcaps}** tile, then clicking on the **x** next to your name.<br>
-  Click **Save** to apply your changes to that role.
-
-3. Add yourself as a validator by clicking on the [validators]{.smallcaps} tile, and selecting your name from the drop-down menu.<br>
-  Click **Save** to apply your changes to that role.
+2. Remove yourself as a developer by clicking on the **[developers]{.smallcaps}** tile, then clicking on the **x** next to your name. Click **Save** to apply your changes to that role.
+3. Add yourself as a validator by clicking on the [validators]{.smallcaps} tile, and selecting your name from the drop-down menu. Click **Save** to apply your changes to that role.
 
 :::
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
-
 
 # Connect to a model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -315,10 +311,10 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 
 ## {background-iframe="/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.html#install-the-validmind-library" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Install & initialize the {{< var validmind.developer >}}**
 
-::: {.f5}
+::: {.f6}
 With your code snippet copied to your clipboard:
 
 1. Open **1 — Set up the {{< var validmind.developer >}} for validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}
@@ -336,10 +332,10 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.html#preview-the-validation-report-template" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Preview the validation report template**
 
-::: {.f5}
+::: {.f6}
 You can preview your model's validation report template right from the {{< var validmind.developer >}}:
 
 1. Continue with **1 — Set up the {{< var validmind.developer >}} for validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}
@@ -353,10 +349,10 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Verify the report template**
 
-::: {.f5}
+::: {.f6}
 Once you've called `preview_template()`:
 
 1. From the model inventory, select the name of your model to open up the model details page.
@@ -365,7 +361,7 @@ Once you've called `preview_template()`:
 
 :::
 
-When you're done, click [{{< fa chevron-right >}}]() to continue.
+When you're done taking a look around, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
@@ -413,7 +409,7 @@ earlier to familiarize you with what the structure <br>
 of documentation could look like when <br>
 presented to you for review.
 
-::: {.f5 .pl3 .pr3 .embed}
+::: {.f6 .pl3 .pr3 .embed}
 The structure of the model documentation reflects <br>
 the documentation template applied to the model, <br>
 just like the validation report template.
