--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -367,7 +367,7 @@ As you prepare your report, review open or past due findings, close resolved one
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-::: {.fr .f5 .nr5 .pa5 .overlay}
+<!-- ::: {.fr .f5 .nr5 .pa5 .overlay}
 **Close a model finding** WIP
 
 WIP
@@ -379,11 +379,11 @@ WIP
 When you're done navigating around,
 <br>click [{{< fa chevron-right >}}]() to continue.
 
-:::
+::: -->
 
 ## {background-iframe="https://app.prod.validmind.ai/model-findings" background-interactive="true" data-preload="yes"}
 
-::: {.fr .f5 .nr5 .pa5 .overlay}
+<!-- ::: {.fr .f5 .nr5 .pa5 .overlay}
 **View all {{< fa triangle-exclamation >}} Model Findings** WIP
 
 WIP
@@ -395,7 +395,7 @@ WIP
 When you're done navigating around,
 <br>click [{{< fa chevron-right >}}]() to continue.
 
-:::
+::: -->
 
 
 
@@ -443,10 +443,10 @@ To transition through the approval workflow, all required workflow steps must be
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Submit for approval**
 
-::: {.f5}
+::: {.f6}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
 2. Locate the **[model status]{.smallcaps}** section.
 3. Open up the status transition panel, enter your **[notes]{.smallcaps}** and any other additional inventory fields, then click **Submit**.
@@ -494,13 +494,11 @@ Have a question about the model? Collaborate with your developer right in the mo
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Comment on a text block**
 
-::: {.f5}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
-3. **In the content block you added earlier:** Post a comment, reply to it, and then resolve the thread.
+::: {.f6}
+**In the content block you added earlier** within your **{{< fa shield >}} Validation Report**: Post a comment, reply to it, and then resolve the thread.
 
 :::
 
@@ -537,10 +535,10 @@ Track changes & updates
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
 **Review model activity**
 
-::: {.f5}
+::: {.f6}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
 2. In the left sidebar that appears for your model, click **Model Activity**.
 3. Filter the following activity: **Comments** | **Status Updates** | **Model Updates** | **Test Results**
@@ -555,7 +553,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f4 .mv6 .nr4 .pa4 .overlay}
+<!-- :::: {.fr .f4 .mv6 .nr4 .pa4 .overlay}
 **{{< fa square-poll-vertical >}} Analytics** WIP
 
 Under **{{< fa square-poll-vertical >}} Analytics**, you can find:
@@ -567,7 +565,7 @@ Under **{{< fa square-poll-vertical >}} Analytics**, you can find:
 - Remediation tracking
 
 Explore existing reports, <br>then click [{{< fa chevron-right >}}]() to continue.
-::::
+:::: -->
 
 
 
